# Advent-Of-Code-2022

./: .gitignore  Cargo.toml
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  main.rs
src/misc/: error.rs  mod.rs
