[package]
name = "Advent-Of-Code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.10.3"
log = "0.4"
pretty_env_logger = "0.4"
rayon = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_plain = "1.0"